add README instructions.

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-11-22 16:53:43 Configured OSMnx 1.1.1\n",
+      "2021-11-22 16:53:43 HTTP response caching is on\n",
+      "2021-11-22 16:53:43 Retrieved response from cache file \"cache/a4dd94959408f2d512e8175e05fc72aa3e647cae.json\"\n",
+      "2021-11-22 16:53:43 Geocoded \"Limuru\" to (-1.1158645, 36.6393103)\n",
+      "2021-11-22 16:53:43 Created bbox 1000 m from (-1.1158645, 36.6393103): -1.1068712966450711,-1.124857703354929,36.648305209165166,36.63031539083483\n",
+      "2021-11-22 16:53:43 Projected GeoDataFrame to +proj=utm +zone=37 +ellps=WGS84 +datum=WGS84 +units=m +no_defs +type=crs\n",
+      "2021-11-22 16:53:43 Projected GeoDataFrame to epsg:4326\n",
+      "2021-11-22 16:53:43 Projected GeoDataFrame to +proj=utm +zone=37 +ellps=WGS84 +datum=WGS84 +units=m +no_defs +type=crs\n",
+      "2021-11-22 16:53:43 Projected GeoDataFrame to epsg:4326\n",
+      "2021-11-22 16:53:43 Requesting data within polygon from API in 1 request(s)\n",
+      "2021-11-22 16:53:44 Retrieved response from cache file \"cache/766d549e95d1d8a6e7497a5456871f2c184c4c37.json\"\n",
+      "2021-11-22 16:53:44 Got all network data within polygon from API in 1 request(s)\n",
+      "2021-11-22 16:53:44 Creating graph from downloaded OSM data...\n",
+      "2021-11-22 16:53:44 Created graph with 3930 nodes and 8204 edges\n",
+      "2021-11-22 16:53:44 Added length attributes to graph edges\n",
+      "2021-11-22 16:53:44 Identifying all nodes that lie outside the polygon...\n",
+      "2021-11-22 16:53:44 Created nodes GeoDataFrame from graph\n",
+      "2021-11-22 16:53:44 Created r-tree spatial index for 3930 geometries\n",
+      "2021-11-22 16:53:44 Identified 2356 geometries inside polygon\n",
+      "2021-11-22 16:53:44 Removed 1574 nodes outside polygon\n",
+      "2021-11-22 16:53:44 Truncated graph by polygon\n",
+      "2021-11-22 16:53:44 Begin topologically simplifying the graph...\n",
+      "2021-11-22 16:53:44 Identified 492 edge endpoints\n",
+      "2021-11-22 16:53:44 Simplified graph: 2356 to 492 nodes, 5013 to 1297 edges\n",
+      "2021-11-22 16:53:44 Identifying all nodes that lie outside the polygon...\n",
+      "2021-11-22 16:53:44 Created nodes GeoDataFrame from graph\n",
+      "2021-11-22 16:53:44 Created r-tree spatial index for 492 geometries\n",
+      "2021-11-22 16:53:44 Identified 174 geometries inside polygon\n",
+      "2021-11-22 16:53:44 Removed 318 nodes outside polygon\n",
+      "2021-11-22 16:53:44 Removed 4 isolated nodes\n",
+      "2021-11-22 16:53:44 Got largest weakly connected component (165 of 170 total nodes)\n",
+      "2021-11-22 16:53:44 Truncated graph by polygon\n",
+      "2021-11-22 16:53:44 Counted undirected street segments incident on each node\n",
+      "2021-11-22 16:53:44 graph_from_polygon returned graph with 165 nodes and 428 edges\n",
+      "2021-11-22 16:53:44 graph_from_bbox returned graph with 165 nodes and 428 edges\n",
+      "2021-11-22 16:53:44 graph_from_point returned graph with 165 nodes and 428 edges\n",
+      "2021-11-22 16:53:44 graph_from_address returned graph with 165 nodes and 428 edges\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install fastapi pydantic\n",
     "\n",
     "from find_route_functions import *\n",
     "\n",
     "limuru_drives = ox.graph_from_address('Limuru',network_type='drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'y': -1.1091688, 'x': 36.6310601, 'street_count': 3}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "limuru_drives.nodes[499462423]"
    ]
   },
   {
